# MajsoulUID

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: auto-liqi.yml
MajsoulUID/: __init__.py  version.py
MajsoulUID/lib/lq/: __init__.py
MajsoulUID/majs_config/: config_default.py  majs_config.py
MajsoulUID/majs_fu/: __init__.py  fu.py
MajsoulUID/majs_help/: Help.json  __init__.py  get_help.py  help.json
MajsoulUID/majs_info/: __init__.py  draw_majs_info_pic.py
MajsoulUID/majs_notify/: __init__.py  _level.py  check_reach.py  codec.py  constants.py  draw_frame.py  draw_friend_rank.py  draw_review_info.py  level.py  majs_to_tenhou.py  majsoul.py  majsoul_friend.py  model.py  tenhou_meguru.py  utils.py
MajsoulUID/majs_notify/tenhou/: cfg.py  constants.py  data.json  model.py  parser.py  review.py  utils.py
MajsoulUID/majs_user/: __init__.py  search_player.py
MajsoulUID/tools/: download_file.py  result.json
MajsoulUID/utils/: error_reply.py  get_liqi.py  image.py  majs_api.py  majs_config.py  map.py
MajsoulUID/utils/api/: api.py  models.py  remote.py  remote_const.py  request.py
MajsoulUID/utils/database/: models.py
MajsoulUID/utils/fonts/: source_han_sans.py  source_han_serif.py
MajsoulUID/utils/proto/: config.py  extendRes.json  get_liqi.py  lqc.json  sheet.py
MajsoulUID/utils/resource/: RESOURCE_PATH.py  get_res.py
