[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
skip-string-normalization = true
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 79
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.pdm]
distribution = false
[tool.poetry]
name = "MajsoulUID"
version = "0.0.1"
description = "基于GsCore, 支持OneBot(QQ)、OneBotV12、QQ频道、微信、KOOK（开黑啦）、Telegram（电报）、FeiShu（飞书）、DoDo、Villa（米游社大别野）、Discord的全功能HoshinoBot/NoneBot2/Koishi/yunzai/ZeroBot雀魂机器人插件"
authors = ["KimigaiiWuyi <444835641@qq.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/KimigaiiWuyi/MajsoulUID"
repository = "https://github.com/KimigaiiWuyi/MajsoulUID"
documentation = "https://docs.sayu-bot.com/"
packages = [{ include = "MajsoulUID" }]
exclude = ["tests", "deploy"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/KimigaiiWuyi/MajsoulUID/issues"

[tool.poetry.dependencies]
python = "^3.8.1"
[[tool.poetry.source]]
name = "USTC"
url = "https://pypi.mirrors.ustc.edu.cn/simple"
priority = "default"

[tool.pyright]
disableBytesTypePromotions = false

[tool.basedpyright]
deprecateTypingAliases = false

[project]
name = "MajsoulUID"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
  { name = "KimigaiiWuyi", email = "444835641@qq.com" },
  { name = "baiqwerdvd", email = "158065462+baiqwerdvd@users.noreply.github.com" },
]
dependencies = [
  "websockets>=13.0.1",
  "httpx>=0.27.2",
  "betterproto>=2.0.0b7",
  "pydantic>=2.9.2",
  "msgspec>=0.18.6",
]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
